@@ -1,9 +1,7 @@
 package com.yzhou.im.common.utils;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
+import org.apache.commons.codec.binary.Base64;
 import java.io.IOException;
-import java.nio.charset.Charset;
 
 /**
  * @description:
@@ -12,7 +10,8 @@ import java.nio.charset.Charset;
  */
 public class Base64URL {
     public static byte[] base64EncodeUrl(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes();
+//        byte[] base64 = new BASE64Encoder().encode(input).getBytes();
+        byte[] base64 = Base64.encodeBase64(input);
         for (int i = 0; i < base64.length; ++i)
             switch (base64[i]) {
                 case '+':
@@ -31,7 +30,8 @@ public class Base64URL {
     }
 
     public static byte[] base64EncodeUrlNotReplace(byte[] input) {
-        byte[] base64 = new BASE64Encoder().encode(input).getBytes(Charset.forName("UTF-8"));
+//        byte[] base64 = new BASE64Encoder().encode(input).getBytes(Charset.forName("UTF-8"));
+        byte[] base64 = Base64.encodeBase64(input);
         for (int i = 0; i < base64.length; ++i)
             switch (base64[i]) {
                 case '+':
@@ -64,7 +64,8 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(new String(input,"UTF-8"));
+//        return new BASE64Decoder().decodeBuffer(new String(input,"UTF-8"));
+        return Base64.decodeBase64(new String(input, "UTF-8"));
     }
 
     public static byte[] base64DecodeUrl(byte[] input) throws IOException {
@@ -83,6 +84,7 @@ public class Base64URL {
                 default:
                     break;
             }
-        return new BASE64Decoder().decodeBuffer(base64.toString());
+//        return new BASE64Decoder().decodeBuffer(base64.toString());
+        return Base64.decodeBase64(input);
     }
 }
